readjust styling to fix box overlap on add post page

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -50,10 +50,6 @@ body {
     background-color: transparent;
 }
 
-.excerpt {
-    height: 50px;
-}
-
 /* The Modal (background) */
 .modal {
     display: none;
